<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    android:paddingTop="100dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/username"
        android:background="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/password"
        android:background="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/login"
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center">

    <Button
        android:id="@+id/translateChange"
        android:text ="@string/choose_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
</LinearLayout>



